2007-01-23  Nurdin Premji  <npremji@redhat.com>

	* hpd/CLI.java (WhereHandler.handle): Changed to use Stackframe.toPrint method.
	(UpDownHandler.handle): Ditto.

2007-01-23  Andrew Cagney  <cagney@redhat.com>

	* hpd/CLI.java: Delete unused import frysk.proc.TaskException.

2007-01-22  Andrew Cagney  <cagney@redhat.com>

	* hpd/CLI.java: Delete unused import java.util.Vector;

	* hpd/SymTab.java: Delete import frysk.proc.TaskException.
		
2007-01-22  Mike Cvet  <mcvet@redhat.com>

	* hpd/ExprSymTab.java (getReg): Removed erroneous frame PC decrement and 
	instead call StackFrame.getAdjustedAddress().
	(getBufferAddr): Ditto.
	(getDie): Ditto.
	* hpd/SymTab.java (complete): Ditto.
	(what): Ditto.

2007-01-22  Andrew Cagney  <cagney@redhat.com>

	* hpd/ExprSymTab.java: Delete catch throwing TaskException as
	RuntimeException.
	* hpd/SymTab.java: Ditto.

2007-01-18  Tim Moore  <timoore@redhat.com>

	* ExprSymTab.java(AccessDW_FORM_block.getBufferAddr,
	AccessDW_FORM_data.getReg): Instead of using MachineType, look at
	the task's Isa.

2007-01-16  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (PrintHandler.handle): Special case baseTypeChar.

2007-01-11  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (complete): New.
	(ListHandler): New.
	* hpd/SymTab.java (complete): New.
	* hpd/UserHelp.java (list): New.	

2006-12-20  Stan Cox  <scox@redhat.com>

	* hpd/AllPTSet.java (taskSets): Use ArrayList instead of Vector.
	* hpd/CLI.java (handle): Likewise.
	* hpd/Command.java (myParameters): Likewise.
	* hpd/DynamicPTSet.java (getTasks): Likewise.
	* hpd/ExecPTSet.java (getTasks): Likewise.
	* hpd/Preprocessor.java (preprocess): Likewise.
	* hpd/ProcTasks.java (getTaskData): Likewise.
	* hpd/SetNotationParser.java (parse): Likewise.
	* hpd/StaticPTSet.java (getProcs): Likewise.
	* hpd/StatePTSet.java (getTasks): Likewise.
	* hpd/UserHelp.java (getCmdList): Likewise.
	* hpd/SymTab.java (print): Add NameNotFoundException, TmpSymTab.